2019-1/230/users/3733/executions/1576_579.log
== TEST (2019-03-13 17:00:05) 
-- CODE:
print ("A UFAM" tem, 2016 - 1909, anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print ("A UFAM" tem, 2016 - 1909, anos de fundacao.")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:00:12) 
-- CODE:
print ("A UFAM" tem, 2016 - 1909, anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print ("A UFAM" tem, 2016 - 1909, anos de fundacao.)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:00:33) 
-- CODE:
print("A UFAM" tem, 2016 - 1909, anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print("A UFAM" tem, 2016 - 1909, anos de fundacao.)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:00:49) 
-- CODE:
print(A UFAM tem, 2016 - 1909, anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem, 2016 - 1909, anos de fundacao.)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:00:52) 
-- CODE:
print(A UFAM tem, 2016 - 1909, anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem, 2016 - 1909, anos de fundacao.)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:01:30) 
-- CODE:
print("A UFAM tem", 2016 - 1909, anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909, anos de fundacao.")
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:01:49) 
-- CODE:
print("A UFAM tem", 2019 - 1909, anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2019 - 1909, anos de fundacao.")
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:02:37) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:02:40) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.150822
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
